gccida/g2/canonicalize_condition
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canonicalize_condition/src/loop.c:9533:4: error: expected ';' after expression
rtx v8; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canonicalize_condition/src/loop.c:9533:5: error: use of undeclared identifier 'v8'
rtx v8; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canonicalize_condition/src/loop.c:9534:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v9; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canonicalize_condition/src/loop.c:9540:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v15; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canonicalize_condition/src/loop.c:9541:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canonicalize_condition/src/loop.c:9541:5: error: use of undeclared identifier 'nonnote_insn'; did you mean 'note_insn'?
rtx nonnote_insn; // rax 
    ^~~~~~~~~~~~
    note_insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canonicalize_condition/src/loop.c:4120:12: note: 'note_insn' declared here
static rtx note_insn;
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canonicalize_condition/src/loop.c:9542:4: error: expected ';' after expression
rtx v17; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canonicalize_condition/src/loop.c:9542:5: error: use of undeclared identifier 'v17'
rtx v17; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canonicalize_condition/src/loop.c:9550:4: error: expected ';' after expression
rtx x; // [rsp+8h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canonicalize_condition/src/loop.c:9550:5: error: use of undeclared identifier 'x'
rtx x; // [rsp+8h] [rbp-50h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canonicalize_condition/src/loop.c:9551:4: error: expected ';' after expression
rtx xa; // [rsp+8h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canonicalize_condition/src/loop.c:9551:5: error: use of undeclared identifier 'xa'
rtx xa; // [rsp+8h] [rbp-50h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canonicalize_condition/src/loop.c:9552:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+1Ch] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canonicalize_condition/src/loop.c:9556:1: error: use of undeclared identifier 'v8'
v8 = ( rtx)cond[1]; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canonicalize_condition/src/loop.c:9573:83: error: use of undeclared identifier 'v8'
if ( rtx_class[v9] == 60 && const_tiny_rtx[0][*( ( unsigned __int8 *)rtx + 2)] == v8 && rtx != want_reg ) 
                                                                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canonicalize_condition/src/loop.c:9580:1: error: use of undeclared identifier 'v8'
v8 = ( rtx)rtx[1]; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canonicalize_condition/src/loop.c:9583:84: error: use of undeclared identifier 'v8'
if ( rtx_class[v10] != 60 || const_tiny_rtx[0][*( ( unsigned __int8 *)rtx + 2)] != v8 || want_reg == rtx ) 
                                                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canonicalize_condition/src/loop.c:9588:1: error: use of undeclared identifier 'nonnote_insn'; did you mean 'note_insn'?
nonnote_insn = prev_nonnote_insn( v5); 
^~~~~~~~~~~~
note_insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canonicalize_condition/src/loop.c:4120:12: note: 'note_insn' declared here
static rtx note_insn;
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canonicalize_condition/src/loop.c:9589:6: error: use of undeclared identifier 'nonnote_insn'; did you mean 'note_insn'?
v5 = nonnote_insn; 
     ^~~~~~~~~~~~
     note_insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canonicalize_condition/src/loop.c:4120:12: note: 'note_insn' declared here
static rtx note_insn;
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canonicalize_condition/src/obj/loop.o] Error 1
